@@ -153,11 +153,13 @@ export(theme_hidegrid)
 export(theme_hidegrid_major)
 export(theme_hidegrid_minor)
 export(theme_hidelabels)
+export(theme_hidelatex)
 export(theme_hidemask)
 export(theme_hideprimary)
 export(theme_hidesecondary)
 export(theme_hideticks)
 export(theme_hidetitles)
+export(theme_latex)
 export(theme_legend_position)
 export(theme_light)
 export(theme_linedraw)
@@ -168,6 +170,7 @@ export(theme_nogrid)
 export(theme_nogrid_major)
 export(theme_nogrid_minor)
 export(theme_nolabels)
+export(theme_nolatex)
 export(theme_nomask)
 export(theme_noprimary)
 export(theme_nosecondary)
@@ -183,6 +186,7 @@ export(theme_showgrid)
 export(theme_showgrid_major)
 export(theme_showgrid_minor)
 export(theme_showlabels)
+export(theme_showlatex)
 export(theme_showmask)
 export(theme_showprimary)
 export(theme_showsecondary)
